--- a/index.html
+++ b/index.html
@@ -667,25 +667,25 @@
           <div class="skill">
             <h3>HTML <span>80%</span></h3>
             <div class="the-progress">
-              <span style="width: 80%"></span>
+              <span style="width: 0" data-width="80%"></span>
             </div>
           </div>
           <div class="skill">
             <h3>CSS <span>85%</span></h3>
             <div class="the-progress">
-              <span style="width: 85%"></span>
+              <span style="width: 0" data-width="85%"></span>
             </div>
           </div>
           <div class="skill">
             <h3>JavaScript <span>70%</span></h3>
             <div class="the-progress">
-              <span style="width: 70%"></span>
+              <span style="width: 0" data-width="70%"></span>
             </div>
           </div>
           <div class="skill">
             <h3>Python <span>80%</span></h3>
             <div class="the-progress">
-              <span style="width: 80%"></span>
+              <span style="width: 0" data-width="80%"></span>
             </div>
           </div>
         </div>
@@ -743,19 +743,19 @@
         <div class="info">
           <div class="time">
             <div class="unit">
-              <span>15</span>
+              <span class="days">15</span>
               <span>Days</span>
             </div>
             <div class="unit">
-              <span>08</span>
+              <span class="hours">08</span>
               <span>Hours</span>
             </div>
             <div class="unit">
-              <span>45</span>
+              <span class="minutes">45</span>
               <span>Minutes</span>
             </div>
             <div class="unit">
-              <span>55</span>
+              <span class="seconds">55</span>
               <span>Seconds</span>
             </div>
           </div>
@@ -868,22 +868,22 @@
       <div class="container">
         <div class="box">
           <i class="far fa-user fa-2x fa-fw"></i>
-          <span class="number">300</span>
+          <span class="number" data-goal="500">0</span>
           <span class="text">Clients</span>
         </div>
         <div class="box">
           <i class="fas fa-code fa-2x fa-fw"></i>
-          <span class="number">400</span>
+          <span class="number" data-goal="1000">0</span>
           <span class="text">Projects</span>
         </div>
         <div class="box">
           <i class="fas fa-globe-asia fa-2x fa-fw"></i>
-          <span class="number">12</span>
+          <span class="number" data-goal="100">0</span>
           <span class="text">Countries</span>
         </div>
         <div class="box">
           <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
-          <span class="number">500K</span>
+          <span class="number" data-goal="20000">0</span>
           <span class="text">Money</span>
         </div>
       </div>
@@ -1003,6 +1003,6 @@
       <p class="copyright">Made With &lt;3 By Elzizo</p>
     </div>
     <!-- End Footer -->
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
   </body>
 </html>
